--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Picture Gallery</h1>
+    <div class="head">
+        <h1>Picture Gallery</h1>
+    </div>
   
   <label for="category">Category:</label>
   <input type="text" id="category" placeholder="Enter category name">
@@ -16,6 +18,6 @@
   <div id="gallery" class="gallery">
   </div>
 
-  <script src="./Gallery.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
